name:                csim-sim
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@ericsson.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable mme-sim
  main-is:             Mme.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , hats
                     , stm
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
