name:                csim-sim
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@ericsson.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable mme-sim
  main-is:             Mme.hs
  other-modules:       Common
                       Options
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , bytestring
                     , hats
                     , optparse-applicative
                     , stm
                     , string-conversions
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable msue-sim
  main-is:             Msue.hs
  other-modules:       Common
                       Options
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , bytestring
                     , hats
                     , optparse-applicative
                     , stm
                     , string-conversions
                     , text
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable enb-sim
    main-is:             Enb.hs
    other-modules:       Common
                         Options
    -- other-extensions:
    build-depends:       base >=4.9 && <4.10
                       , aeson
                       , bytestring
                       , hats
                       , optparse-applicative
                       , stm
                       , string-conversions
                       , text
                       , unordered-containers
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall
